# pdcurses-rs

./: Cargo.toml  README.md  build.rs
examples/: yellow.rs
src/: ext.rs  lib.rs  sys.rs
