[package]
name = "pdcurses"
version = "0.0.0"
authors = ["et342"]
edition = "2018"
repository = "https://github.com/et342/pdcurses-rs"
description = "A Rust bindings for PDCurses"
license = "The Unlicense"
categories = ["external-ffi-bindings", "command-line-interface"]
keywords = ["windows", "console", "tui", "terminal", "curses"]
readme = "README.md"
links = "pdcurses"

[dependencies]
libc = "0.2.80"

[build-dependencies]
cc = "1.0.62"

[features]
# Enable debugging facilities within PDCurses.
debug = []

# Force PDCurses to treat byte strings as UTF-8. PDCurses will rely on the current locale otherwise.
force_utf8 = []

# Provide ncurses-rs compatibility APIs
ncurses_compat = []

# Don't build PDCurses from source. Instead, search for it in the paths specified by the LIBRARY_PATH environment variable.
# PDCurses must be built with RGB an WIDE modes enabled.
unbundled = []
